Fix horizontal scrolling for categories

--- a/static/styles.css
+++ b/static/styles.css
@@ -39,17 +39,94 @@ input[type="text"] {
 .padding-top {
 	padding-top: 30px;
 }
+
 .padding-bottom {
 	padding-bottom: 10px;
 }
+
 .margin-right {
 	margin-right: 30px;
 }
+
 .padding-none {
 	padding: 0;
 }
 
 /*Heading and Banner */
+
+.top-menu {
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+.top-menu p {
+	margin-bottom: 0;
+	line-height: 16px;
+}
+.top-menu a {
+	margin-bottom: 0;
+	line-height: 16px;
+	font-size: 16px;
+	color: #7B7573;
+	font-weight: 400;
+}
+
+.banner.menu {
+	height: 150px;
+	background-color: #E1E17F;
+}
+
+.banner.profile {
+	height: 150px;
+	background-color: #A6E8EB;
+}
+
+.banner.main {
+	height: 150px;
+	background: url('/static/furniture.jpg');
+	background-position: right;
+	background-repeat: no-repeat;
+	background-size: cover;
+	text-align: center;
+	opacity: 0.8;
+	margin-bottom: 10px;
+
+}
+
+.banner.main h1 {
+	margin: 45px 0;
+	padding: 45px;
+	color: white;
+	font-weight: 400;
+	text-shadow: 2px 2px black;
+	text-transform: uppercase;
+	opacity: 1;
+}
+
+.loginprofile {
+	width: 150px; 
+	height: 150px;
+	border-radius: 150px;
+	-webkit-border-radius: 150px;
+	-moz-border-radius: 150px;
+}
+
+.smallprofilepic {
+	width: 30px;
+	height: 30px;
+	border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	margin-bottom: 10px;
+}
+
+.login-area {
+	text-align:right;
+	width: 100%;
+	display:block;
+}
+
+/*Buttons*/
 
 .btn {
 	margin-right: 5px;
@@ -67,56 +144,14 @@ input[type="text"] {
 	color: red;
 }
 
-.top-menu {
-	padding-top: 30px;
-	padding-bottom: 30px;
-}
-.top-menu p {
-	margin-bottom: 0;
-	line-height: 16px;
-}
-.top-menu a {
-	margin-bottom: 0;
-	line-height: 16px;
-	font-size: 16px;
-	color: #7B7573;
-	font-weight: 400;
-}
-.divider {
-	height: 15px;
-}
-
-.divider.green {
-	background-color: #9FB80A;
-}
-.banner.main {
-	height: 150px;
-	background: url('/static/furniture.jpg');
-	background-position: right;
-	background-repeat: no-repeat;
-	background-size: cover;
-	text-align: center;
-	opacity: 0.8;
+.modify-buttons {
+	display: block;
+	margin: 5px;
 	margin-bottom: 10px;
+}
 
-}
-.banner.menu {
-	height: 150px;
-	background-color: #E1E17F;
-}
-.banner.profile {
-	height: 150px;
-	background-color: #A6E8EB;
-}
-.banner.main h1 {
-	margin: 45px 0;
-	padding: 45px;
-	color: white;
-	font-weight: 400;
-	text-shadow: 2px 2px black;
-	text-transform: uppercase;
-	opacity: 1;
-}
+/* Category Items */
+
  .item-list {
  	background-color: #FFF;
 	 padding: 20px;
@@ -153,19 +188,6 @@ input[type="text"] {
 	font-weight: 400;
 	margin-top: -20px;
 }
-.flash {
-	background-color: #98FB98;
-	width:100%;
-	text-decoration: none;
-
-}
-
-.flash li {
-	list-style-type: none;
-	text-align: center;
-
-}
-
 
 .item-photo {
 	width: 50%;
@@ -178,98 +200,35 @@ input[type="text"] {
 	
 }
 
-.modify-buttons {
-	display: block;
-	margin: 5px;
-	margin-bottom: 10px;
+/* Flash Messages */
+.flash {
+	background-color: greenyellow;
+	width:100%;
+	text-decoration: none;
 }
 
-.loginprofile {
-	width: 150px; 
-	height: 150px;
-	border-radius: 150px;
-	-webkit-border-radius: 150px;
-	-moz-border-radius: 150px;
-}
-
-.smallprofilepic {
-	width: 30px;
-	height: 30px;
-	border-radius: 30px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	margin-bottom: 10px;
-}
-
-.login-area {
-	text-align:right;
-	width: 100%;
-	display:block;
-
+.flash li {
+	list-style-type: none;
+	text-align: center;
 
 }
 
-.scrolling-wrapper {
-	position: relative;
-	max-width: 800px;
-	height: 300px;
-	margin: 1em auto;
-	display: flex;
-	flex-wrap: nowrap;
-	/*overflow-x: auto;*/
-	overflow-x:hidden;
-	overflow-y:hidden;
-	/*-webkit-overflow-scrolling: touch;*/
-	align-items:center;
-}
-
+/* Categories */
 .category-section {
 	margin-bottom: 30px;
 	-webkit-overflow-scrolling: touch;
-}
-
-.scrolling-wrapper p {
-	white-space: normal;
+	display: flex;
+	flex-wrap: nowrap;
+	overflow-x:auto;
 }
 
 .card {
 	width: 300px;
 	margin: 0 10px 0 10px;
-	display: inline-block;
+	flex: 0 0 auto;
 }
 
 .card-footer {
 	  margin-top: auto;
 	  min-height: 100px;
 	}
-  
-.arrow {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	width: 3em;
-}
-
-.left-arrow {
-	left:0;
-}
-
-.right-arrow {
-	right:0;
-}
-
-.hidden {
-	display:none;
-}
-
-
-.cardContainer {
-	-webkit-overflow-scrolling: touch;
-	display: flex;
-	flex-wrap: nowrap;
-	overflow-x:hidden;
-	overflow-y:hidden;
-	
-
-
-}
